[AAE-39413] Add integrationContextCounter to CloudServiceTask
