# activiti-cloud-query-service/activiti-cloud-starter-query/src/test/resources/swagger-expected.json
@@ -7787,6 +7787,10 @@
       "CloudServiceTask" : {
         "type" : "object",
         "properties" : {
+          "integrationContextCounter" : {
+            "type" : "integer",
+            "format" : "int32"
+          },
           "id" : {
             "type" : "string"
           },
